# remote-agent-collaboration-skills

./: .gitattributes  .gitignore  AGENT_INSTALL.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  agent-install.json  install.ps1  install.sh  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: test.yml  tests.yml
adapters/claude-code/: CLAUDE.md  README.md  lead-prompt.md  member-prompt.md
demo/: README.md  demo-transcript.txt
docs/: ARCHITECTURE.md  CODEX_PLUGIN_DISTRIBUTION_AUDIT.md  GIT_COLLABORATION.md  INSTALLATION.md  LIMITATIONS.md  LOGGING_AND_COMPACTION.md  METAPLANNER_TO_GENERIC_MAPPING.md  PERMISSIONS.md  PROMOTION_KIT.md  PROTOCOL.md  PROTOCOL_REFERENCE.md  README_REFERENCE_AUDIT.md  REMOTE_GIT_MODE.md  ROLE_SESSION_LOCK.md
docs/audits/: phase0-hook-feasibility.md  plan-compliance-audit.md
examples/tiny-team-project/: AGENTS.md  COLLAB_LOG.md  README.md  TEAM_TASKS.md
examples/vibe-coding-team/: README.md
hooks/: _bootstrap.py  hooks.json  pre_tool_use.py  session_start.py  stop.py  subagent_start.py  subagent_stop.py  user_prompt_submit.py
scripts/: generate_demo.py  verify_readme_assets.py
skills/team-lead-collaboration/: SKILL.md
templates/: AGENTS.md  COLLAB_LOG.md  MODULE_OWNERSHIP.md  TEAM_TASKS.md
tests/: TEST_PLAN.md  test_cli_protocol.py  test_hooks_runtime.py  test_markdown_protocol.py  test_plugin_distribution.py  test_privacy_scan.py  test_remote_git_mode.py
tools/: doctor.py  install.py  uninstall.py
(+33 files in other folders)
