[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-agent-collaboration"
version = "0.1.0"
description = "Codex collaboration protocol with lead/member skills and fail-closed role locks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Remote Agent Collaboration Contributors" }]
dependencies = []

[project.scripts]
collabctl = "remote_agent_collaboration.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
